--- a/css/typography.css
+++ b/css/typography.css
@@ -6,14 +6,9 @@ font-weight: normal;
 }
 h1 a { color: #000; text-decoration: none; }
 
-h2{
-    color: #000;
-   font-family: Tahoma ,sans-serif;
-   font-size : 19px;
-   font-weight: normal;
-}
+
 h3 {
-color: #ff9900;
+color: #000;
 font-family: "Myriad Pro", Helvetica, Arial,Tahoma, sans-serif;
 font-size: 24px;
 font-weight: normal;
@@ -26,13 +21,20 @@ font-family: Arial, Helvetica, sans-serif;
 h5 {
 color: #6ec9cc;
 font-family: "Myriad Pro", Helvetica, Arial, sans-serif;
-font-size: 18px;
-font-weight: normal;
+font-size: 19px;
+
 }
 h5 a { color: #6ec9cc; text-decoration: none; }
 
 p {
-color: #000;
-font-family: times new roman, sans-serif;
-font-size: 19px;
+    color: #222222;
+    font-family: "Lora";
+    font-size: 18px;
+    font-style: normal;
+    font-weight: normal;
+    margin: 15px 0 10px;
+    text-align: justify;
+  
+
+
 }
